# fritz_datacollector

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build-and-push-develop.yaml  build-and-push-release.yaml  build-and-push-tagged-release.yaml  check-PR-labels-master.yaml  check-PR-labels.yaml  tag-build-push-release.yaml  tag-release.yaml  tag_release.yaml  update-versions.yaml  update_versions.yaml
fritz_datacollector/: __main__.py  _version.py
fritz_datacollector/routers/: data.py
