[tool.poetry]
name = "fritz-datacollector"
version = "0.1.4"
description = ""
authors = ["Patrick Dreker <patrick@dreker.de>"]
readme = "README.md"
packages = [{include = "fritz_datacollector"}]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov-branch --cov . --cov-report xml --cov-config .coveragerc"
testpaths = [
    "tests",
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.86.0"
uvicorn = "^0.19.0"


[tool.poetry.group.dev.dependencies]
mypy = "^0.981"
black = "^22.8.0"
flake8 = "^5.0.4"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
flake8-bugbear = "^22.9.23"
flake8-assertive = "^2.1.0"
flake8-comprehensions = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
