[tool.poetry]
name = "fritz-datacollector"
version = "0.1.4"
description = ""
authors = ["Patrick Dreker <patrick@dreker.de>"]
readme = "README.md"
packages = [{include = "fritz_datacollector"}]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov-branch --cov . --cov-report xml --cov-config .coveragerc"
testpaths = [
    "tests",
]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.23.2"
fastapi = "^0.96.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3"
black = "^23.1.0"
flake8 = "^6.1.0"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
flake8-bugbear = "^23.3.12"
flake8-assertive = "^2.1.0"
flake8-comprehensions = "^3.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
